<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <group
        android:id="@+id/group"
        android:menuCategory="container">

        <item
            android:id="@+id/setting"
            android:title="@string/setting"
            app:showAsAction="never" />
        <item
            android:id="@+id/info"
            android:title="@string/info"
            app:showAsAction="never" />
        <item
            android:id="@+id/exit"
            android:title="@string/exit"
            app:showAsAction="never" />
    </group>
    <item
        android:id="@+id/camera"
        android:icon="@drawable/ic_baseline_photo_camera_24"
        app:showAsAction="ifRoom"
        tools:ignore="MenuTitle" />
    <item
        android:id="@+id/mail"
        android:icon="@drawable/ic_baseline_contact_mail_24"
        app:showAsAction="ifRoom"
        tools:ignore="MenuTitle" />



</menu>