<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#000"
    android:weightSum="9"
    tools:context=".ImageR">

    <ImageView
        android:id="@+id/gallery1"
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_margin="16dp"
        android:layout_weight="3"
        android:contentDescription="@string/fire"
        android:scaleType="centerCrop"
        tools:src="@color/bckg" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2">

        <Button
            android:id="@+id/play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:text="@string/play"
            android:textAllCaps="false"
            android:textColor="#000"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/stop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:text="@string/stop"
            android:textAllCaps="false"
            android:textColor="#000"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

</LinearLayout>