<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000"
    tools:context=".Camera">

    <ImageView
        android:id="@+id/kit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/fire"
        android:src="@drawable/police"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/oc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:background="#000"
        android:drawableStart="@drawable/ic_baseline_photo_camera_24"
        android:drawablePadding="4dp"
        android:onClick="openCamera"
        android:text="@string/open_camera"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/om"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/kit" />

    <Button
        android:id="@+id/om"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:background="#000"
        android:drawableStart="@drawable/ic_baseline_contact_mail_24"
        android:drawablePadding="0dp"
        android:onClick="sendAttachment"
        android:text="@string/send"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/oc"
        app:layout_constraintTop_toBottomOf="@id/kit" />


</androidx.constraintlayout.widget.ConstraintLayout>